# CPPL5-CourseWork

./: .gitignore  CMakeLists.txt  CommentEvent.cpp  CommentEvent.h  ErrorEvent.h  FilePos.cpp  FilePos.h  README.MD  ReadFinishEvent.h  ReadIniFile.cpp  example.ini  main.cpp
IniFileParser/: CMakeLists.txt  CharUtils.cpp  CharUtils.h  CommentEvent.cpp  CommentEvent.h  Constants.h  ErrorEvent.cpp  IniFileParserExports.h  IniParser.cpp  IniParser.h  IniParserTests.cpp  MiscUtils.h  ParameterValueEvent.cpp  ParameterValueEvent.h  ParseError.cpp  ParseError.h  ReadFinishEvent.cpp  ReadIniFile.cpp  ReadIniFile.h  ReadParamError.h  Reader.cpp  Reader.h  ReaderEvent.cpp  ReaderEvent.h  ReaderTests.cpp  SectionStartEvent.cpp  SectionStartEvent.h  StringUtils.cpp  StringUtils.h  StringUtilsTests.cpp  test_main.cpp
IniFileParserApp/: CMakeLists.txt  example.ini  example_error.ini  main.cpp
