cmake_minimum_required(VERSION 3.10)
project(IniFileParser)
set(sources  "ReaderEvent.h" "Constants.h" "ReaderEvent.cpp" "readIniFile.cpp" "CommentEvent.h" "CommentEvent.cpp"       "CharUtils.h" "CharUtils.cpp" "FilePos.cpp" "FilePos.h" "IniFileParserExports.h" "SectionStartEvent.h" "SectionStartEvent.cpp" "ParameterValueEvent.h" "ParameterValueEvent.cpp" "ParseError.h")
add_library(IniFileParser SHARED ${sources})
target_compile_definitions(IniFileParser PRIVATE INIFILEPARSER_EXPORTS)
add_executable(IniFileParserTests ${sources} "test_main.cpp")